--- a/package.json
+++ b/package.json
@@ -6,36 +6,66 @@
     "prebuild": "rimraf dist",
     "build": "next build",
     "lint": "npm-run-all -s 'lint:*'",
-    "lint:eslint": "eslint src",
-    "lint:prettier": "prettier --check src",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check .",
     "lint:markup": "markuplint -p src/**/*.tsx",
     "fmt": "npm-run-all -s 'fmt:*'",
-    "fmt:eslint": "eslint src --fix",
-    "fmt:prettier": "prettier --write src"
+    "fmt:eslint": "eslint . --fix",
+    "fmt:prettier": "prettier --write .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "test": "vitest",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
     "@vanilla-extract/css": "^1.9.5",
     "next": "^13.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-aria": "^3.23.1",
+    "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.0.1",
+    "react-stately": "^3.21.0"
   },
   "devDependencies": {
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
     "@naporin0624/eslint-config": "^0.7.1",
     "@next/eslint-plugin-next": "^13.2.3",
+    "@storybook/addon-a11y": "^6.5.16",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vanilla-extract/next-plugin": "^2.1.1",
+    "@vanilla-extract/vite-plugin": "^3.8.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.35.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "happy-dom": "^8.9.0",
     "markuplint": "^3.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
-    "typescript": "^4.9.5"
+    "storybook-dark-mode": "^2.0.6",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^0.29.2"
   }
 }
