--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
     "@vanilla-extract/css": "^1.9.5",
+    "@vanilla-extract/css-utils": "^0.1.3",
     "next": "^13.2.3",
     "react": "^18.2.0",
     "react-aria": "^3.23.1",
