--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "fmt": "npm-run-all -s 'fmt:*'",
     "fmt:eslint": "eslint . --fix",
     "fmt:prettier": "prettier --write .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
     "test": "vitest",
     "type-check": "tsc --noEmit"
   },
