--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "prebuild": "rimraf dist",
     "build": "next build",
+    "start": "next start",
     "lint": "npm-run-all -s 'lint:*'",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
