--- a/.github/workflows/check-website.yml
+++ b/.github/workflows/check-website.yml
@@ -24,3 +24,5 @@ jobs:
         run: |
           npm install -g @lhci/cli
           npx lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
