--- a/.github/workflows/check-website.yml
+++ b/.github/workflows/check-website.yml
@@ -8,14 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: ./.node-version
-          cache: npm
-
       - name: Install Dependencies
-        run: npm install
+        uses: ./.github/workflows/modules/install-dependencies
 
       - name: Build Application
         run: npm run build
