--- a/.github/workflows/modules/install-dependencies/action.yml
+++ b/.github/workflows/modules/install-dependencies/action.yml
@@ -13,7 +13,9 @@ runs:
         path: "**/node_modules"
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
     - run: echo '${{ toJSON(steps.node_modules_cache_id.outputs) }}'
+      shell: bash
 
     - name: Install Dependencies
       if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
       run: npm install
+      shell: bash
