--- a/.github/workflows/modules/install-dependencies/action.yml
+++ b/.github/workflows/modules/install-dependencies/action.yml
@@ -11,7 +11,7 @@ runs:
     - uses: actions/cache@v3
       id: npm-cache
       with:
-        path: node_modules
+        path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: ${{ runner.os }}-node-
 
