--- a/.github/workflows/check-website.yml
+++ b/.github/workflows/check-website.yml
@@ -2,6 +2,7 @@ name: check web site
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
     branches-ignore:
       - main
     # paths:
