--- a/.github/workflows/deploy-preview-storybook.yml
+++ b/.github/workflows/deploy-preview-storybook.yml
@@ -11,14 +11,11 @@ jobs:
   deploy-preview:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: ./.github/workflows/modules/setup-node
 
       - id: repository
         run: echo "name=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_OUTPUT
-
-      - name: Install Dependencies
-        uses: ./.github/workflows/modules/install-dependencies
 
       - name: Build Storybook
         run: npm run build-storybook
