--- a/.github/workflows/modules/setup-node/action.yml
+++ b/.github/workflows/modules/setup-node/action.yml
@@ -17,16 +17,15 @@ runs:
     - uses: actions/cache@v3
       id: npm-cache
       with:
-        path: '**/node_modules'
+        path: "**/node_modules"
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: ${{ runner.os }}-node-
 
     - run: echo '${{ toJSON(steps.npm-cache.outputs) }}'
       shell: bash
-    
-    - if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
-      run:
-        npm ls --depth=0
+
+    - if: ${{ steps.node_modules_cache_id.outputs.cache-hit == 'true' }}
+      run: npm ls --depth=0
       shell: bash
 
     - name: Install Dependencies
