--- a/.github/workflows/check-website.yml
+++ b/.github/workflows/check-website.yml
@@ -39,22 +39,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const result = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary
-            # const links = ${{ steps.lighthouse_audit.outputs.links }}
-            # const formatResult = (res) => Math.round((res * 100))
-            # Object.keys(result).forEach(key => result[key] = formatResult(result[key]))
-            # const score = res => res >= 90 ? '🟢' : res >= 50 ? '🟠' : '🔴'
-            # const comment = [
-            #     `[Lighthouse分析結果](${Object.values(links)[0]}):`,
-            #     '| 項目 | スコア |',
-            #     '| --- | --- |',
-            #     `| ${score(result.performance)} パフォーマンス | ${result.performance} |`,
-            #     `| ${score(result.accessibility)} アクセシビリティ | ${result.accessibility} |`,
-            #     `| ${score(result['best-practices'])} ベストプラクティス | ${result['best-practices']} |`,
-            #     `| ${score(result.seo)} SEO | ${result.seo} |`,
-            #     `| ${score(result.pwa)} PWA | ${result.pwa} |`,
-            #     ' ',
-            #     `*Lighthouse Result URL: [${Object.keys(links)[0]}](${Object.keys(links)[0]})*`
-            # ].join('\n')
+            console.log(result)
 
             core.setOutput("comment", "test");
 
