--- a/.github/workflows/check-website.yml
+++ b/.github/workflows/check-website.yml
@@ -38,8 +38,8 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const result = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary
-            const links = ${{ steps.lighthouse_audit.outputs.links }}
+            const result = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary;
+            const links = ${{ steps.lighthouse_audit.outputs.links }};
 
             const comment = [
               `[Lighthouse分析結果](${Object.values(links)[0]}):`,
@@ -52,7 +52,7 @@ jobs:
                 `| ${score(result.pwa)} PWA | ${result.pwa} |`,
                 ' ',
                 `*分析したURL: [${Object.keys(links)[0]}](${Object.keys(links)[0]})*`
-            ].join('\n')
+            ].join('\n');
 
             core.setOutput("comment", comment);
 
