--- a/.github/workflows/modules/setup-node/action.yml
+++ b/.github/workflows/modules/setup-node/action.yml
@@ -24,11 +24,11 @@ runs:
     - run: echo '${{ toJSON(steps.npm-cache.outputs) }}'
       shell: bash
 
-    - if: ${{ steps.node_modules_cache_id.outputs.cache-hit == 'true' }}
+    - if: ${{ steps.npm-cache.outputs.cache-hit == 'true' }}
       run: npm ls --depth=0
       shell: bash
 
     - name: Install Dependencies
-      if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
+      if: ${{ steps.npm-cache.outputs.cache-hit != 'true' }}
       run: npm install
       shell: bash
