--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@acab/reset.css": "^0.5.3",
     "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
     "@vanilla-extract/css": "^1.9.5",
