--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fmt:prettier": "prettier --write .",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "test": "vitest",
+    "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
