--- a/package.json
+++ b/package.json
@@ -70,5 +70,10 @@
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.29.2"
+  },
+  "nextBundleAnalysis": {
+    "budget": 358400,
+    "budgetPercentIncreaseRed": 20,
+    "showDetails": true
   }
 }
