--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,19 +1,11 @@
-name: check web site
+name: Lighthouse
 
 on:
-  push:
   pull_request:
     types: [opened, synchronize, reopened]
-    branches-ignore:
-      - main
-    # paths:
-    #   - src/**/*.tsx
-    #   - src/**/*.ts
-    #   - next.config.js
 
 jobs:
   lighthouse:
-    name: Lighthouse
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +19,6 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          number: ${{ github.event.issue.number }}
           header: lighthouse
           message: |
             Analyzing in lighthouse...
@@ -37,6 +28,8 @@ jobs:
         uses: treosh/lighthouse-ci-action@v3
         with:
           configPath: ./.lighthouserc.json
+          uploadArtifacts: true
+          temporaryPublicStorage: true
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
@@ -46,14 +39,30 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const comment = JSON.stringify(${{ steps.lighthouse_audit.outputs }}, null, 2);
+            const result = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary
+            const links = ${{ steps.lighthouse_audit.outputs.links }}
+            console.log(result, links)
+
+            const formatResult = (res) => Math.round((res * 100))
+            Object.keys(result).forEach(key => {
+              result[key] = formatResult(result[key])
+            })
+            const score = res => res >= 90 ? '🟢' : res >= 50 ? '🟠' : '🔴'
+            const comment = [
+              `[Report Lighthouse](${Object.values(links)[0]}):`,
+              '| performance | accessibility | best-practices | SEO | PWA |',
+              '| --- | --- | --- | --- | --- |',
+              `| ${result.performance} ${score(result.performance)} | ${result.accessibility} ${score(result.accessibility)} | ${result['best-practices']} ${score(result['best-practices'])} | ${result.seo} ${score(result.seo)} | ${result.pwa} ${score(result.pwa)} |`,
+              ' ',
+              `*Report URL: [${Object.keys(links)[0]}](${Object.keys(links)[0]})*`
+            ].join('\n')
+
             core.setOutput("comment", comment);
 
       - name: comment lighthouse result
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          number: ${{ github.event.issue.number }}
           header: lighthouse
           message: |
             ${{ steps.format_lighthouse_score.outputs.comment }}
