--- a/.github/workflows/modules/setup-node/action.yml
+++ b/.github/workflows/modules/setup-node/action.yml
@@ -17,7 +17,7 @@ runs:
     - uses: actions/cache@v3
       id: npm-cache
       with:
-        path: ~/.npm
+        path: "**/node_modules"
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: ${{ runner.os }}-node-
 
@@ -25,5 +25,6 @@ runs:
       shell: bash
 
     - name: Install Dependencies
+      if: ${{ steps.npm-cache.outputs.cache-hit != 'true' }}
       run: npm install
       shell: bash
