--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -2,6 +2,10 @@ name: "Next.js Bundle Analysis"
 
 on:
   pull_request:
+    paths:
+      - "**/*.tsx"
+      - "**/*.ts"
+      - "next.config.js"
   push:
     branches:
       - main # change this if your default branch is named differently
