--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -3,10 +3,10 @@ name: Lighthouse
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-    paths:
-      - "**/*.tsx"
-      - "**/*.ts"
-      - "next.config.js"
+    # paths:
+    #   - "**/*.tsx"
+    #   - "**/*.ts"
+    #   - "next.config.js"
 
 jobs:
   lighthouse:
