:+1: update lh config

--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,6 +1,9 @@
 {
   "ci": {
     "preset": "lighthouse:recommended",
+    "assert": {
+      "preset": "lighthouse:no-pwa"
+    },
     "collect": {
       "numberOfRuns": 1,
       "startServerCommand": "npm run start",
