--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -6,8 +6,7 @@
     },
     "collect": {
       "numberOfRuns": 1,
-      "startServerCommand": "npm run start",
-      "url": ["http://localhost:3000/"]
+      "url": ["https://www.napochaan.com"]
     },
     "upload": {
       "target": "temporary-public-storage"
