--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -8,7 +8,8 @@
     },
     "collect": {
       "numberOfRuns": 1,
-      "url": ["https://www.napochaan.com"]
+      "startServerCommand": "npm run start",
+      "url": ["http://localhost:3000"]
     },
     "upload": {
       "target": "temporary-public-storage"
