--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,9 +1,15 @@
 {
   "ci": {
+    "assert": {
+      "preset": "lighthouse:no-pwa",
+      "assertions": {
+        "uses-text-compression": "off"
+      }
+    },
     "collect": {
       "numberOfRuns": 1,
       "startServerCommand": "npm run start",
-      "url": ["http://localhost:3000/"]
+      "url": ["http://localhost:3000"]
     },
     "upload": {
       "target": "temporary-public-storage"
