--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,8 +1,6 @@
 name: Lighthouse
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+on: push
 
 jobs:
   lighthouse:
@@ -10,13 +8,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/modules/setup-node
-      - name: install lighthouse cli
-        run: npm install -g @lhci/cli
 
       - name: Build Application
         run: npm run build
 
-      - name: Lighthouse CI
-        run: lhci autorun
+      - name: run Lighthouse CI
+        run: |
+          npm install -g @lhci/cli@0.11.x
+          lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
