--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rimraf": "^4.3.0",
     "storybook-dark-mode": "^2.0.6",
     "typescript": "^4.9.5",
+    "vercel": "^28.16.15",
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.29.2"
